--- a/config/staging.env
+++ b/config/staging.env
@@ -23,6 +23,11 @@ CLICKHOUSE_TIMEOUT=30
 SERVER_PORT=8080
 LOG_LEVEL=INFO
 
+# Authentication Configuration (staging defaults)
+# These will be overridden by GitHub Actions secrets in actual deployment
+JWT_SECRET_KEY=staging-jwt-secret-key-should-be-replaced-in-deployment
+FERNET_KEY=staging-fernet-key-should-be-replaced-in-deployment
+
 # Feature Flags for Staging
 SKIP_MIGRATION_ON_STARTUP=false
 ENABLE_STARTUP_CHECKS=true
