--- a/app/pytest.ini
+++ b/app/pytest.ini
@@ -8,6 +8,7 @@ markers =
     smoke: marks tests as smoke tests (quick validation tests)
     stress: marks tests as stress tests (high load/scale tests)
     slow: marks tests as slow tests (long-running tests)
+    performance: marks tests as performance tests (performance benchmarks)
 
 [coverage:run]
 source = app
