--- a/frontend/package.json
+++ b/frontend/package.json
@@ -99,6 +99,7 @@
     "jest-fetch-mock": "^3.0.3",
     "msw": "^2.10.4",
     "react-hook-form": "^7.62.0",
+    "react-router-dom": "^7.8.0",
     "recharts": "^3.1.2",
     "socket.io-client": "^4.8.1",
     "start-server-and-test": "^2.0.13",
