much better clarity on testing types

--- a/app/pytest.ini
+++ b/app/pytest.ini
@@ -9,6 +9,15 @@ markers =
     stress: marks tests as stress tests (high load/scale tests)
     slow: marks tests as slow tests (long-running tests)
     performance: marks tests as performance tests (performance benchmarks)
+    real_llm: marks tests that require real LLM API calls (uses actual API keys)
+    real_database: marks tests that require real database connections (PostgreSQL)
+    real_redis: marks tests that require real Redis connection
+    real_clickhouse: marks tests that require real ClickHouse connection
+    real_services: marks tests that require any real external services
+    mock_only: marks tests that use only mocks and no external dependencies
+    unit: marks tests as unit tests (isolated component testing)
+    integration: marks tests as integration tests (component interaction)
+    e2e: marks tests as end-to-end tests (full system flow)
 
 [coverage:run]
 source = app
