--- a/.env.development
+++ b/.env.development
@@ -14,7 +14,7 @@ FRONTEND_URL=http://localhost:3000
 API_URL=http://localhost:8000
 
 # Database (local development)
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/netra_dev
+DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/netra
 REDIS_URL=redis://localhost:6379/0
 CLICKHOUSE_URL=clickhouse://localhost:9000/default
 
