--- a/.env.backup
+++ b/.env.backup
@@ -16,8 +16,8 @@ API_URL="http://localhost:8000"
 # Database (local development)
 # DATABASE_URL=postgresql+asyncpg://postgres:123@localhost:5432/netra
 DATABASE_URL="postgresql://user@localhost/netra"
-REDIS_URL="redis://localhost:6379/0"
-CLICKHOUSE_URL="clickhouse://localhost:9000/default"
+# REDIS_URL="redis://localhost:6379/0" # placeholder
+# CLICKHOUSE_URL="clickhouse://localhost:9000/default" # placeholder
 
 # Security (development only)
 SECRET_KEY="dev-secret-key-change-in-production"
@@ -26,3 +26,7 @@ JWT_SECRET_KEY="dev-jwt-secret-change-in-production"
 # Development Mode Flags
 DEBUG=true
 RELOAD=true
+
+# DEV_MODE_DISABLE_REDIS=true
+# DEV_MODE_DISABLE_CLICKHOUSE=true
+# DEV_MODE_DISABLE_LLM=true
